--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "prompt-sync": "^4.2.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0"
+    "@types/bcrypt": "^6.0.0",
+    "@types/prompt-sync": "^4.2.3"
   }
 }
